force-app/main/default/objects/CustomerProfile__c/CustomerProfile__c.object-meta.xml
<CustomObject>
    <label>Customer Profile</label>
    <nameField>
        <label>Customer Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Profile</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>