force-app/main/default/objects/CustomerProfile__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <formula>IF( NOT(ISBLANK( Account__c )), 
TEXT(Account__r.Segment__c), 
&#39;&#39;)</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>