force-app/main/default/objects/CustomerProfile__c/fields/AccountGlobalDescription__c.field-meta.xml
<CustomField>
    <fullName>AccountGlobalDescription__c</fullName>
    <formula>Account__r.GlobalDescription__c</formula>
    <label>Account Global Description</label>
    <type>Text</type>
</CustomField>