force-app/main/default/objects/CustomerProfile__c/fields/Cargill_Ingredients_in_Top_Brands__c.field-meta.xml
<CustomField>
    <fullName>Cargill_Ingredients_in_Top_Brands__c</fullName>
    <label>Cargill Ingredients in Top Brands</label>
    <length>255</length>
    <type>Text</type>
</CustomField>