force-app/main/default/objects/CustomerProfile__c/fields/ConvenienceOpportunities__c.field-meta.xml
<CustomField>
    <fullName>ConvenienceOpportunities__c</fullName>
    <label>Convenience Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>