force-app/main/default/objects/CustomerProfile__c/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Counter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>