force-app/main/default/objects/CustomerProfile__c/fields/Customer_Programs__c.field-meta.xml
<CustomField>
    <fullName>Customer_Programs__c</fullName>
    <label>Customer Programs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>