force-app/main/default/objects/CustomerProfile__c/fields/Customer_s_Volume__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Volume__c</fullName>
    <inlineHelpText>Customer’s Annual Transaction Amount in pounds</inlineHelpText>
    <label>Customer’s Volume</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>