force-app/main/default/objects/CustomerProfile__c/fields/CustomerDescription__c.field-meta.xml
<CustomField>
    <fullName>CustomerDescription__c</fullName>
    <label>Customer Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>