force-app/main/default/objects/CustomerProfile__c/fields/DevelopmentFocus__c.field-meta.xml
<CustomField>
    <fullName>DevelopmentFocus__c</fullName>
    <label>Development Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>