force-app/main/default/objects/CustomerProfile__c/fields/Drivers__c.field-meta.xml
<CustomField>
    <fullName>Drivers__c</fullName>
    <label>Drivers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lean &amp; Green</fullName>
            </value>
            <value>
                <fullName>Better Without</fullName>
            </value>
            <value>
                <fullName>Better With</fullName>
            </value>
            <value>
                <fullName>Cleaner Label</fullName>
            </value>
            <value>
                <fullName>Differentiated Performance</fullName>
            </value>
            <value>
                <fullName>Supplier/Service Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>