force-app/main/default/objects/CustomerProfile__c/fields/Express_Value__c.field-meta.xml
<CustomField>
    <fullName>Express_Value__c</fullName>
    <description>Express Value</description>
    <inlineHelpText>The values the customer states and try’s to align their products and services to such as Healthy food, Leader in Innovation,
 Best in class style.</inlineHelpText>
    <label>Express Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>