force-app/main/default/objects/CustomerProfile__c/fields/Global_Account__c.field-meta.xml
<CustomField>
    <fullName>Global_Account__c</fullName>
    <formula>HYPERLINK( &#39;/&#39; &amp; IF( NOT(ISBLANK(Account__r.Parent.Name)), Account__r.ParentId , Account__c), IF( NOT(ISBLANK(Account__r.Parent.Name)), Account__r.Parent.Name , Account__r.Name) , &#39;_blank&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Account</label>
    <type>Text</type>
</CustomField>