force-app/main/default/objects/CustomerProfile__c/fields/Global_Account_id__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_id__c</fullName>
    <formula>Account__r.ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Account id</label>
    <type>Text</type>
</CustomField>