force-app/main/default/objects/CustomerProfile__c/fields/HealthWellnessOpportunities__c.field-meta.xml
<CustomField>
    <fullName>HealthWellnessOpportunities__c</fullName>
    <label>Health &amp; Wellness Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>