force-app/main/default/objects/CustomerProfile__c/fields/Market_Channel__c.field-meta.xml
<CustomField>
    <fullName>Market_Channel__c</fullName>
    <formula>Text(Account__r.Market_Channel__c)</formula>
    <label>Market Channel</label>
    <type>Text</type>
</CustomField>