force-app/main/default/objects/CustomerProfile__c/fields/MarketShare__c.field-meta.xml
<CustomField>
    <fullName>MarketShare__c</fullName>
    <label>Market Share</label>
    <length>255</length>
    <type>Text</type>
</CustomField>