force-app/main/default/objects/CustomerProfile__c/fields/of_Strategic_Objectives__c.field-meta.xml
<CustomField>
    <fullName>of_Strategic_Objectives__c</fullName>
    <label># of Strategic Objectives</label>
    <summaryForeignKey>StrategicObjective__c.CustomerProfile__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>