force-app/main/default/objects/CustomerProfile__c/fields/Opportunity_Space__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Space__c</fullName>
    <label>Opportunity Space</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antibiotic Free</fullName>
            </value>
            <value>
                <fullName>Food with a Story</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>Value Added</fullName>
            </value>
            <value>
                <fullName>Convenience</fullName>
                <isActive>false</isActive>
                <label>Convenience</label>
            </value>
            <value>
                <fullName>Health &amp; Wellness</fullName>
                <isActive>false</isActive>
                <label>Health &amp; Wellness</label>
            </value>
            <value>
                <fullName>Sensory</fullName>
                <isActive>false</isActive>
                <label>Sensory</label>
            </value>
            <value>
                <fullName>Value &amp; Service</fullName>
                <isActive>false</isActive>
                <label>Value &amp; Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>