force-app/main/default/objects/CustomerProfile__c/fields/PotentialTools__c.field-meta.xml
<CustomField>
    <fullName>PotentialTools__c</fullName>
    <label>Potential Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Risk Managment</fullName>
            </value>
            <value>
                <fullName>Trade &amp; Structured Finance</fullName>
            </value>
            <value>
                <fullName>Cargill Optimizing Services</fullName>
            </value>
            <value>
                <fullName>Waste Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>