force-app/main/default/objects/CustomerProfile__c/fields/PreventMoreThanOneRecord__c.field-meta.xml
<CustomField>
    <fullName>PreventMoreThanOneRecord__c</fullName>
    <label>PreventMoreThanOneRecord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>