force-app/main/default/objects/CustomerProfile__c/fields/PrimaryApplication__c.field-meta.xml
<CustomField>
    <fullName>PrimaryApplication__c</fullName>
    <label>Primary Application</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>PrimaryCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bread/ bread products </fullName>
            </value>
            <value>
                <fullName>Sweet Biscuits/Cookies </fullName>
            </value>
            <value>
                <fullName>Savory Biscuits/Crackers </fullName>
            </value>
            <value>
                <fullName>Pastries/Sweet Goods </fullName>
            </value>
            <value>
                <fullName>Mixes &amp; Doughs </fullName>
            </value>
            <value>
                <fullName>Pasta </fullName>
            </value>
            <value>
                <fullName>Dry Mixes </fullName>
            </value>
            <value>
                <fullName>Carbonated Soft Drinks </fullName>
            </value>
            <value>
                <fullName>Functional &amp; Flavored Water </fullName>
            </value>
            <value>
                <fullName>Juice, Juice Drinks, Nectars </fullName>
            </value>
            <value>
                <fullName>Sports/Energy </fullName>
            </value>
            <value>
                <fullName>RTD Tea/Coffee </fullName>
            </value>
            <value>
                <fullName>Powdered /Dry Mixes </fullName>
            </value>
            <value>
                <fullName>Liquid Concentrates </fullName>
            </value>
            <value>
                <fullName>Beer </fullName>
            </value>
            <value>
                <fullName>Wine, spirits and alc flavored drinks </fullName>
            </value>
            <value>
                <fullName>Sugar Confectionery </fullName>
            </value>
            <value>
                <fullName>Chewing Gums </fullName>
            </value>
            <value>
                <fullName>Chocolate </fullName>
            </value>
            <value>
                <fullName>Fillings, Coatings, Toppings </fullName>
            </value>
            <value>
                <fullName>Ready Meals/Kits </fullName>
            </value>
            <value>
                <fullName>Soups </fullName>
            </value>
            <value>
                <fullName>Sauces, Dressings &amp; Condiments </fullName>
            </value>
            <value>
                <fullName>Oils, Fats and Spreads </fullName>
            </value>
            <value>
                <fullName>Egg Products </fullName>
            </value>
            <value>
                <fullName>Cheese </fullName>
            </value>
            <value>
                <fullName>Creams </fullName>
            </value>
            <value>
                <fullName>Liquid Creamers </fullName>
            </value>
            <value>
                <fullName>Dairy Desserts </fullName>
            </value>
            <value>
                <fullName>Dairy Drinks </fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>