force-app/main/default/objects/CustomerProfile__c/fields/PrimaryCategory__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCategory__c</fullName>
    <label>Primary Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M1 Product experience/High Vertical Integration</fullName>
            </value>
            <value>
                <fullName>M2 Value – Product Innovation &amp; Supply Chain/ High Vertical Integration</fullName>
            </value>
            <value>
                <fullName>M3 Low vertical B2C</fullName>
            </value>
            <value>
                <fullName>M4 Low Vertical integration B2B</fullName>
            </value>
            <value>
                <fullName>F1 Product Experience &amp; Value Differentiation/B2C – Scratch</fullName>
            </value>
            <value>
                <fullName>F2 Product Experience /B2C – Assembly &amp; B2C – Heat and Serve</fullName>
            </value>
            <value>
                <fullName>F3 Value Differentiation/ B2C – Assembly &amp; B2C – Heat and Serve</fullName>
            </value>
            <value>
                <fullName>F4 Product Experience/B2B – Move Product</fullName>
            </value>
            <value>
                <fullName>F5 Value Differentiation/ B2B – Move Product</fullName>
            </value>
            <value>
                <fullName>F6 Product Experience &amp; Value Differentiation/B2B – Manage Product</fullName>
            </value>
            <value>
                <fullName>F7 Product Experience &amp; Value Differentiation/Institution</fullName>
            </value>
            <value>
                <fullName>R1  Product experience/High &amp; Medium In-house</fullName>
            </value>
            <value>
                <fullName>R2 Value – Product Innovation/High In-House</fullName>
            </value>
            <value>
                <fullName>R3 Value – Product Innovation/Medium In-House</fullName>
            </value>
            <value>
                <fullName>R4 Product experience &amp; Value – Product Innovation/Low In-House</fullName>
            </value>
            <value>
                <fullName>R5 Value – Supply Chain Innovation</fullName>
            </value>
            <value>
                <fullName>T Trade</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
                <isActive>false</isActive>
                <label>Bakery</label>
            </value>
            <value>
                <fullName>Beverage</fullName>
                <isActive>false</isActive>
                <label>Beverage</label>
            </value>
            <value>
                <fullName>Confectionery</fullName>
                <isActive>false</isActive>
                <label>Confectionery</label>
            </value>
            <value>
                <fullName>Convenience foods</fullName>
                <isActive>false</isActive>
                <label>Convenience foods</label>
            </value>
            <value>
                <fullName>Dairy</fullName>
                <isActive>false</isActive>
                <label>Dairy</label>
            </value>
            <value>
                <fullName>Feed</fullName>
                <isActive>false</isActive>
                <label>Feed</label>
            </value>
            <value>
                <fullName>Food ingredients</fullName>
                <isActive>false</isActive>
                <label>Food ingredients</label>
            </value>
            <value>
                <fullName>Fruit</fullName>
                <isActive>false</isActive>
                <label>Fruit</label>
            </value>
            <value>
                <fullName>Industrial</fullName>
                <isActive>false</isActive>
                <label>Industrial</label>
            </value>
            <value>
                <fullName>Infant &amp; baby food</fullName>
                <isActive>false</isActive>
                <label>Infant &amp; baby food</label>
            </value>
            <value>
                <fullName>Meat</fullName>
                <isActive>false</isActive>
                <label>Meat</label>
            </value>
            <value>
                <fullName>Personal care</fullName>
                <isActive>false</isActive>
                <label>Personal care</label>
            </value>
            <value>
                <fullName>Pet food</fullName>
                <isActive>false</isActive>
                <label>Pet food</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>