force-app/main/default/objects/CustomerProfile__c/fields/PrimaryChannel__c.field-meta.xml
<CustomField>
    <fullName>PrimaryChannel__c</fullName>
    <label>Primary Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>