force-app/main/default/objects/CustomerProfile__c/fields/ProductLines__c.field-meta.xml
<CustomField>
    <fullName>ProductLines__c</fullName>
    <description>This may be defined as Picklist or Lookup based on Cargill discussion around Product Hierarachy.</description>
    <label>ProductLines</label>
    <type>TextArea</type>
</CustomField>