force-app/main/default/objects/CustomerProfile__c/fields/Profile_Category__c.field-meta.xml
<CustomField>
    <fullName>Profile_Category__c</fullName>
    <label>Profile Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All Proteins</fullName>
            </value>
            <value>
                <fullName>Beef</fullName>
            </value>
            <value>
                <fullName>Case Ready</fullName>
            </value>
            <value>
                <fullName>Continuous Cooked</fullName>
            </value>
            <value>
                <fullName>Deli / Diced</fullName>
            </value>
            <value>
                <fullName>Deli / Prepared Foods</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>Extruded / Kettles</fullName>
            </value>
            <value>
                <fullName>Frozen Breakfast</fullName>
            </value>
            <value>
                <fullName>Fry Line</fullName>
            </value>
            <value>
                <fullName>Hot Dogs</fullName>
            </value>
            <value>
                <fullName>Pepperoni</fullName>
            </value>
            <value>
                <fullName>Raw</fullName>
            </value>
            <value>
                <fullName>Snacking</fullName>
            </value>
            <value>
                <fullName>Turkey</fullName>
            </value>
            <value>
                <fullName>Value Added Raw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>