force-app/main/default/objects/CustomerProfile__c/fields/RDCapabilities__c.field-meta.xml
<CustomField>
    <fullName>RDCapabilities__c</fullName>
    <label>R&amp;D Capabilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
                <isActive>false</isActive>
                <label>Combination</label>
            </value>
            <value>
                <fullName>Inhouse</fullName>
                <isActive>false</isActive>
                <label>Inhouse</label>
            </value>
            <value>
                <fullName>Limited</fullName>
                <isActive>false</isActive>
                <label>Limited</label>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
            <value>
                <fullName>Value2</fullName>
                <isActive>false</isActive>
                <label>Value2</label>
            </value>
            <value>
                <fullName>outsourced</fullName>
                <isActive>false</isActive>
                <label>outsourced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>