force-app/main/default/objects/CustomerProfile__c/fields/SensoryOpportunities__c.field-meta.xml
<CustomField>
    <fullName>SensoryOpportunities__c</fullName>
    <label>Sensory Opportunities</label>
    <type>TextArea</type>
</CustomField>