force-app/main/default/objects/CustomerProfile__c/fields/Share_of_the_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Share_of_the_Wallet__c</fullName>
    <label>Share of the Wallet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>