force-app/main/default/objects/CustomerProfile__c/fields/Strategic_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Initiative__c</fullName>
    <description>Strategic Initiative</description>
    <inlineHelpText>Customers stated key drivers for the fiscal year. These are usually high level and apply across the business. 
 Examples would be Grow Food service market space by 5 points, Reduce procurement costs by 10%.</inlineHelpText>
    <label>Strategic Initiative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>