force-app/main/default/objects/CustomerProfile__c/fields/SustainabilityOpportunities__c.field-meta.xml
<CustomField>
    <fullName>SustainabilityOpportunities__c</fullName>
    <label>Sustainability Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>