force-app/main/default/objects/CustomerProfile__c/fields/Value_drivers__c.field-meta.xml
<CustomField>
    <fullName>Value_drivers__c</fullName>
    <label>Value drivers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Product Selection</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Private Label</fullName>
            </value>
            <value>
                <fullName>Non-Conventional Protein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>