force-app/main/default/objects/CustomerProfile__c/fields/ValueServiceOpportunities__c.field-meta.xml
<CustomField>
    <fullName>ValueServiceOpportunities__c</fullName>
    <label>Value &amp; Service Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>