force-app/main/default/objects/CustomerProfile__c/fields/Way_Customer_Is_Organized__c.field-meta.xml
<CustomField>
    <fullName>Way_Customer_Is_Organized__c</fullName>
    <label>Way Customer Is Organized</label>
    <length>255</length>
    <type>Text</type>
</CustomField>