force-app/main/default/objects/CustomerProfile__c/validationRules/RestrictCustomerProfileNameUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictCustomerProfileNameUpdate</fullName>
    <active>true</active>
    <description>Customer Profile Name cannot be updated. It can be editable only at the time of creation.</description>
    <errorConditionFormula>AND( 
NOT(ISNEW()), 
ISCHANGED(Name), 
$Profile.Name &lt;&gt; &#39;System Administrator&#39; 
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Customer Profile Name cannot be changed.</errorMessage>
</ValidationRule>